--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 id="avatar1"
               />
             </div>
+            <!-- đổi tên ở đây -->
             <div class="name-container">
               <h2 class="name" id="name1">Bá Khang</h2>
             </div>
@@ -51,6 +52,7 @@
                 id="avatar2"
               />
             </div>
+            <!-- đổi tên ở đây  -->
             <div class="name-container">
               <h2 class="name" id="name2">Huyền</h2>
             </div>
@@ -81,6 +83,7 @@
             <p>Giây</p>
           </div>
         </div>
+        <!-- đổi ngày ở đây -->
         <p class="love-date">
           Kể từ ngày
           <span class="highlight-date" id="startDate">04/12/2021</span>
@@ -113,7 +116,7 @@
         </div>
       </div>
     </section>
-
+    <!-- thay ảnh ở đây và thêm ảnh ở đây -->
     <!-- Gallery Section -->
     <section class="gallery" id="gallery">
       <div class="container">
@@ -165,7 +168,7 @@
         </div>
       </div>
     </section>
-
+    <!-- thêm dòng thời gian -->
     <!-- Timeline Section -->
     <section class="timeline">
       <div class="container">
